Use the new EGIDS table from the website

--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -115,14 +115,30 @@ The UNESCO rating is mostly used in the \textit{UNESCO Atlas of the World?s Lang
 
 \citet{lewis2010assessing}, the authors of Ethnologue \citep{lewis2009ethnologue}\footnote{Also a website available at \href{https://www.ethnologue.com/}{https://www.ethnologue.com/}.}, pointed out some of the issues with GIDS which necessitate the creation of a new standard, and which could also eclipse or inform the UNESCO rating. First, the levels are static, and don't account for directionality on the part of a language community up or down the strata. Second, there are language types which aren't included - for instance, there isn't a supranational level for extremely well-off languages, nor is there are level for extinct or dormant languages. Thirdly, GIDS focuses on intergenerational disruption in Level 5 and down, but in Level 4 and higher it focuses more on institutions, and this isn't accounted for well enough in the framework, which primarily focuses on parents as being the primary agents of language transmissions. Finally, the lower levels are not granular enough to cover the many complexities needed for language revitalisation groups.
 
-\begin{figure}
- \centering
- \includegraphics[width=1\textwidth]{img/egids.png}
- \caption{A summary of EGIDS from \citep{lewis2010assessing}}
- \label{fig:egids}
-\end{figure}
+EGIDS - the Expanded GIDS - serves these needs by providing more granular definitions. It also draws on the extensive knowledge of languages and their usage provided not only by Ethnologue, but also by the UNESCO Atlas and the community of linguists working with the Summer Institute of Linguistics (SIL), who fund and published Ethnologue. Figure~\ref{table:egids} shows the main categories, taken from the Ethnologue website\footnote{\href{https://www.ethnologue.com/about/language-status}{https://www.ethnologue.com/about/language-status}}. The table has been updated since \citet{lewis2010assessing}, in particular to also account for signed languages \citep{bickford2015rating}. The addition of a Level 0 and two levels beneath the scale are evident, as well as more granularity in the GIDS scale, such as can be seen with Level 6, which now has two levels, Level 6a Vigorous and Level 6b Threatened.
 
-EGIDS - the Expanded GIDS - serves these needs by providing more granular definitions. It also draws on the extensive knowledge of languages and their usage provided not only by Ethnologue, but also by the UNESCO Atlas and the community of linguists working with the Summer Institute of Linguistics (SIL), who fund and published Ethnologue. Figure~\ref{fig:egids} shows the main categories, taken from \citet{lewis2010assessing}, as well as the corresponding UNESCO ratings. The addition of a Level 0 and two levels beneath the scale are evident, as well as more granularity in the GIDS scale, such as can be seen with Level 6, which now has two levels, Level 6a Vigorous and Level 6b Threatened.
+\begin{table}
+\begin{center}
+\begin{tabular}{|p{1cm}|p{3cm}|p{10cm}|} \hline
+\textbf{Level}	& \textbf{Label}	& \textbf{Description} \\ \hline
+0 	& International &  	The language is widely used between nations in trade, knowledge exchange, and international policy. \\ \hline
+1 	& National &  	The language is used in education, work, mass media, and government at the national level. \\ \hline
+2 	& Provincial &  	The language is used in education, work, mass media, and government within major administrative subdivisions of a nation. \\ \hline
+3 	& Wider &  Communication 	The language is used in work and mass media without official status to transcend language differences across a region. \\ \hline
+4 	& Educational &  	The language is in vigorous use, with standardization and literature being sustained through a widespread system of institutionally supported education. \\ \hline
+5 	& Developing &  	The language is in vigorous use, with literature in a standardized form being used by some though this is not yet widespread or sustainable. \\ \hline
+6a 	& Vigorous &  	The language is used for face-to-face communication by all generations and the situation is sustainable. \\ \hline
+6b 	& Threatened &  	The language is used for face-to-face communication within all generations, but it is losing users. \\ \hline
+7 	& Shifting &  	The child-bearing generation can use the language among themselves, but it is not being transmitted to children. \\ \hline
+8a 	& Moribund &  	The only remaining active users of the language are members of the grandparent generation and older. \\ \hline
+8b 	& Nearly &  Extinct 	The only remaining users of the language are members of the grandparent generation or older who have little opportunity to use the language. \\ \hline
+9 	& Dormant &  	The language serves as a reminder of heritage identity for an ethnic community, but no one has more than symbolic proficiency. \\ \hline
+10 	& Extinct &  	The language is no longer used and no one retains a sense of ethnic identity associated with the language. \\ \hline
+\end{tabular}
+\end{center}
+\caption{Expanded Graded Intergenerational Disruption Scale}
+\label{table:egids}
+\end{table}
 
 \citet{lewis2010assessing} also add another set of EGID levels which can be used to rate a language which is ascending in domains due to revitalisation efforts, which Figure~\ref{fig:egids-up} shows. This is generally useful, although it does suggest that a language uniformly descends or ascends, which may not be the case. The authors also spend time describing how to identify a language and decide which level best describes it.
 
@@ -136,9 +152,9 @@ EGIDS - the Expanded GIDS - serves these needs by providing more granular defini
 They end with a quote from \citet{fishman2001can}, which explains further the purpose of EGIDS:
 
 \begin{quote}
-Thus, any theory and practice of assistance to threatened languages-whether the threat be a threat to their very lives, on the one hand, or a much less serious functional threat, on  the  other  hand-must  begin  with  a  model  of  the  functional  diversification  of languages. If analysts can appropriately identify the functions that are endangered as a result of the impact of stronger languages and cultures on weaker ones, then it may become easier to recommend which therapeutic steps must be undertaken in order to counteract any injurious impact that occurs. The purpose of our analyses must be to understand, limit and rectify the societal loss of functionality in the weaker language when  two  languages  interact  and  compete  for  the  same  functions within  the  same 
+Thus, any theory and practice of assistance to threatened languages-whether the threat be a threat to their very lives, on the one hand, or a much less serious functional threat, on  the  other  hand-must  begin  with  a  model  of  the  functional  diversification  of languages. If analysts can appropriately identify the functions that are endangered as a result of the impact of stronger languages and cultures on weaker ones, then it may become easier to recommend which therapeutic steps must be undertaken in order to counteract any injurious impact that occurs. The purpose of our analyses must be to understand, limit and rectify the societal loss of functionality in the weaker language when  two  languages  interact  and  compete  for  the  same  functions within  the  same
 ethnocultural  community  and  to  differentiate  between  life-threatening  and  non-life-threatening losses.
-\end{quote} 
+\end{quote}
 
 \subsubsection{LEI}
 
