--- a/references.bib
+++ b/references.bib
@@ -54,6 +54,17 @@
   publisher={SIL International Dallas, TX}
 }
 
+@article{bickford2015rating,
+  title={Rating the vitality of sign languages},
+  author={Bickford, J Albert and Lewis, M Paul and Simons, Gary F},
+  journal={Journal of Multilingual and Multicultural Development},
+  volume={36},
+  number={5},
+  pages={513--527},
+  year={2015},
+  publisher={Taylor \& Francis}
+}
+
 @book{fishman2001can,
   title={Can threatened languages be saved?: Reversing language shift, revisited: A 21st century perspective},
   author={Fishman, Joshua A},
