Section 2.2.4: The Language Endangerment Index

--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -68,7 +68,7 @@ A \textit{computer} or \textit{computational} language is a formalised language 
 
 Other terms used in exploring the theory of language, semiotics, or formal language theory - such as context-free or recursively-enumerable languages - are likewise unimportant to this thesis unless they touch on human and low resource languages directly in some tangible way.
 
-\subsection{Metrics}
+\subsection{Metrics for Language Vitality}
 \label{subsec:metrics}
 
 Language health or vitality is a topic of increasing scholarship and interest. Superficially, it makes sense to use a similar system to classify languages as one would classify species, using the metrics defined by the International Union for Conservation of Nature (IUCN)\footnote{\href{http://www.iucnredlist.org/}{http://www.iucnredlist.org/}}. They have nine levels of classification: Extinct, Extinct in the Wild, Critically Endangered, Endangered, Vulnerable, Near Threatened, Least Concern, Data Deficient and Not Evaluated. However, the system is not directly transferable - how would a dormant language be classified? One can see immediately that there is a need for a language-specific rating system.
@@ -86,7 +86,7 @@ The Graded Intergenerational Disruption Scale, developed by \citet{fishman1991re
  \label{fig:gids}
 \end{figure}
 
-\subsubsection{UNESCO}
+\subsubsection{The UNESCO measurement scale}
 \label{subsec:unesco}
 
 The United Nations Educational, Scientific and Cultural Organization (UNESCO) is a specialised agency of the United Nations. In 2001, at the 31st Session of the UNESCO General Conference, they officially recognised that biodiversity, cultural diversity, and linguistic diversity are related. This viewpoint is relatively recent, and reflects increasing appreciation that culturally diverse regions tend to collocate with biodiverse regions, and that saving diversity implies saving both \citep{nettle2000vanishing, maffi2001biocultural, , anderson2006language, krauss2007keynote, gorenflo2012co} (as discussed explicitly in \citet{maffi2001}, of which all of the authors were also members of the UNESCO Ad Hoc Expert Group on Endangered Languages). Encouragingly, UNESCO clarified at this event that sustaining and encouraging linguistic diversity lies within their charter.
@@ -144,7 +144,7 @@ EGIDS - the Expanded GIDS - serves these needs by providing more granular defini
 
 \begin{figure}
  \centering
- \includegraphics[width=1\textwidth]{img/egids-up.png}
+ \includegraphics[width=.8\textwidth]{img/egids-up.png}
  \caption{A summary of EGIDS ascending levels from \citep{lewis2010assessing}}
  \label{fig:egids-up}
 \end{figure}
@@ -156,9 +156,25 @@ Thus, any theory and practice of assistance to threatened languages-whether the 
 ethnocultural  community  and  to  differentiate  between  life-threatening  and  non-life-threatening losses.
 \end{quote}
 
-\subsubsection{LEI}
+\subsubsection{The Language Endangerment Index (LEI)}
 
-The Language Endangerment Index
+Just as EGIDS expanded on GIDS, the Language Endangerment Index (LEI) was formed to resolve some of the issues with EGIDS, as well as to respond to GIDS, the UNESCO rating, and the rating in \citet{krauss2007classification} which focused almost exclusively on different ages of speakers and classified all languages with children speakers as 'stable', and all with over a million speakers as 'safe'. \citet{lee2016assessing} describe LEI for its use in The Catalogue of Endangered Languages (ELCat), part of the Google-powered Endangered Languages Project\footnote{\href{endangeredlanguages.com}{endangeredlanguages.com}}. The project isn't only sponsored by Google, but also by an NSF Grant\footnote{\href{https://www.nsf.gov/awardsearch/showAward?AWD\_ID=1058096}{https://www.nsf.gov/awardsearch/showAward?AWD\_ID=1058096}}, and is an ambitious project (like UNESCO and Ethnolohue) to catalogue all languages and to provide specific metrics of language vitality.
+
+The authors, in describing LEI, going into detail explaining how previous classifications, while they "highlight[s] the immensity of the problem at hand", can not easily apply to certain languages, and that these exceptions are critical to understanding whether the metrics are useful as opposed to being exceptions which prove the rule. Unlike they other papers, they explicitly mention some languages - for instance, looking at how \citet{dwyer2012tools} points out that Wutun, a Chinese-Tibetan-Mongolic language, is endangered due to a variety of factors even if transgenerational transmission is not at risk. A similar case could be made for Naskapi (see Section~\ref{sec:naskapi} for more on this).
+
+The LEI uses four factors: intergenerational transmission, absolute number of speakers, speaker number trends (whether increasing or decreasing), and domains of use. Each of these is rated, like the UNESCO rating on a scale from null to five - however, unlike UNESCO, they add these numbers up to produce a single rating. The higher it is, the more likely the language is endangered. The scales are also somewhat different; for instance, number of speakers runs on orders of magnitude, with 100,000 being the top bound for a safe language (and not a million, like in \citet{krauss2007classification}).
+
+\subsubsection{A response to qualitative metrics}
+
+\citet{lee2016assessing} point out further issues with some of the other assessments - most notably that "while the UNESCO framework is broad and its factors comprehensive, it does not give an overall vitality score to the language being assessed, making it difficult to compare accurately across different language" and that "while an assessment of the type and quality of documentation is doubtlessly important because it helps indicate the potential for revitalization and the urgency of further research, it is not clear that the type and quality of documentation directly affects the vitality of a language." These two points are interesting, because they reflect how the situation of \citet{lee2016assessing} influences their judgement and their decision in making LEI at all. The authors were aware that they were being quantitative:
+
+\begin{quote}
+Some may prefer a more nuanced examination of a language's vitality, with the view that the factors responsible for a language's endangerment are too complex to be compared across languages. Researchers of this view would rally against quantitative measures, stating that quantitative measures can hardly be accurate. ... ELCat researchers, while sympathetic to these points of view, maintain that without understanding and investigating fundamental common factors responsible for language endangerment, very little progress will be made in assessing language vitality and, consequently, less can be done to help communities preserve their languages. ELCat strikes a balance between these different perspectives.
+\end{quote}
+
+As \citet{grenoble2016response} points out, this rather misses the point of qualitative rebuttals, by % TODO does this actually? Rephrase and research
+
+
 
 % TODO Alexis: would be interesting to also discuss how these metrics might apply for the set of languages you're interested in (as defined in 2.1)
 
