--- a/references.bib
+++ b/references.bib
@@ -11,12 +11,41 @@
  year={2014}
 }
 
+@article{grenoble2016response,
+  title={A response to ‘Assessing levels of endangerment in the Catalogue of Endangered Languages (ELCat) using the Language Endangerment Index (LEI)’, by Nala Huiying Lee \& John Van Way},
+  author={Grenoble, Lenore A},
+  journal={Language in Society},
+  volume={45},
+  number={2},
+  pages={293--300},
+  year={2016},
+  publisher={Cambridge University Press}
+}
+
+
 @book{fishman1991reversing,
   title={Reversing language shift: Theoretical and empirical foundations of assistance to threatened languages},
   author={Fishman, Joshua A},
   volume={76},
   year={1991},
   publisher={Multilingual matters}
+}
+
+@article{krauss2007classification,
+  title={Classification and terminology for degrees of language endangerment},
+  author={Krauss, Michael},
+  journal={Language diversity endangered},
+  volume={181},
+  pages={1},
+  year={2007},
+  publisher={Walter de Gruyter}
+}
+
+@article{dwyer2012tools,
+  title={Tools and techniques for endangered-language assessment and revitalization},
+  author={Dwyer, Arienne M},
+  journal={Minor. Lang. Today’s Glob. Soc},
+  year={2012}
 }
 
 @misc{unesco2014unesco,
@@ -275,6 +304,17 @@
  url={https://books.google.ca/books?id=hO9mAAAACAAJ},
  year={1973},
  publisher={Turtleback Books}
+}
+
+@article{lee2016assessing,
+  title={Assessing levels of endangerment in the Catalogue of Endangered Languages (ELCat) using the Language Endangerment Index (LEI)},
+  author={Lee, Nala Huiying and Van Way, John},
+  journal={Language in Society},
+  volume={45},
+  number={2},
+  pages={271--292},
+  year={2016},
+  publisher={Cambridge University Press}
 }
 
 @article{hinton2001sleeping,
