--- a/5-case-studies.tex
+++ b/5-case-studies.tex
@@ -1,8 +1,10 @@
 % !TEX root = thesis.tex
-\section{Case Studies}\label{sec:case-studies}
+\section{Case Studies}
+\label{sec:case-studies}
 \subsection{Scottish Gaelic}
+\label{sec:gaelic}
 
-Scottish Gaelic is a Celtic language spoken mainly in the United Kingdom, which UNESCO defines as {\it definitely endangered} \footnote{\href{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}}. Gaelic - sometimes called Scots Gaelic, simply Gaelic, or the Gaelic - is a Goidelic or Q-Celtic langauge, along with Manx and Irish (also sometimes called Irish Gaelic, but here always referred to as Irish). This means that, while related to the Brythonic languages of Welsh, Cornish and Breton, it is different enough to not be able to benefit from the many resources available in Welsh, which, while endangered, has a much stronger academic interest and presence in the United Kingdom, with roughly half a million speakers. 
+Scottish Gaelic is a Celtic language spoken mainly in the United Kingdom, which UNESCO defines as {\it definitely endangered} \footnote{\href{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}}. Gaelic - sometimes called Scots Gaelic, simply Gaelic, or the Gaelic - is a Goidelic or Q-Celtic langauge, along with Manx and Irish (also sometimes called Irish Gaelic, but here always referred to as Irish). This means that, while related to the Brythonic languages of Welsh, Cornish and Breton, it is different enough to not be able to benefit from the many resources available in Welsh, which, while endangered, has a much stronger academic interest and presence in the United Kingdom, with roughly half a million speakers.
 
 
 A large corpus compiled by the An Crub\'ad\'an project is available online \footnote{\href{http://crubadan.org/languages/gd}{http://crubadan.org/languages/gd}} \citep{scannell2007crubadan}.
@@ -12,6 +14,7 @@ As it is similar to Irish, it is a good example of how code from related languag
 %% Mention Ceitidh https://www.cereproc.com/en/CereProc_Gaelic_Synthetic_Voice_Ceitidh
 
 \subsection{Naskapi}
+\label{sec:naskapi}
 
 % \subsubsection{Language Background}
 
