Section 2.2.5: A response to qualitative metrics

--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -172,22 +172,23 @@ The LEI uses four factors: intergenerational transmission, absolute number of sp
 Some may prefer a more nuanced examination of a language's vitality, with the view that the factors responsible for a language's endangerment are too complex to be compared across languages. Researchers of this view would rally against quantitative measures, stating that quantitative measures can hardly be accurate. ... ELCat researchers, while sympathetic to these points of view, maintain that without understanding and investigating fundamental common factors responsible for language endangerment, very little progress will be made in assessing language vitality and, consequently, less can be done to help communities preserve their languages. ELCat strikes a balance between these different perspectives.
 \end{quote}
 
-As \citet{grenoble2016response} points out, this rather misses the point of qualitative rebuttals, by % TODO does this actually? Rephrase and research
+As \citet{grenoble2016response} points out, this misses the point of qualitative rebuttals, by claiming that accuracy is the most salient argument. It doesn't have to be, as there are more pressing concerns. For instance, and as \citet{grenoble2016response} points out, all of the metrics were built on the assumptions that quantifying language endangerment is useful, and that assessment directly leads to empowering communities to revitalise their language. Neither of these are directly backed up by empirical research. More pressingly, language itself is not indisputable something that is countable or measurable, and to think so is to reflect Western, modernist ideologies surrounding language as a distinct entity which is formalised in writing and education. Language could be viewed alternatively as inextricable from the speaker and the utterance, especially by language groups which view themselves as separate from a nation-state or an ethnographic group \citep{bodo2017language}. To view language otherwise is to confine language to a countable, commodifiable entity in a post-colonial sense, which affects how the language is viewed and can have real effects on language communities. Even viewing linguistic biodiversity as something to be 'saved' raises ideological  concerns, as Haspelmath (one of the main editors of \citet{wals}) notes. \footnote{\href{dlc.hypotheses.org/195}{dlc.hypotheses.org/195}} Indeed, post-colonial attitudes towards language endangerment may be endemic; \citet{newman1998we} certainly suggests that non-Western linguists cannot adequately document or revitalise their own languages without Western training, which presupposes that to be an informed researched one must also conform to Western ideologies. Against this backdrop, \citet{lee2016assessing}'s claims that accuracy is something that can be attained seems to miss the mark; rather, the canonical approach to metrics is in itself a flawed approach that carries with it certain uncomfortable presumptions.
 
+This thesis cannot hope to resolve these issues, nor is it meant to be an overview of the field of language vitality or endangerment as ideology. However, it is worth noting that metrics of language vitality do not exist in a vacuum, and that documentation and computational efforts are also a part of wider questions. Literacy is not a domain into which a language has to ascend to be seen as 'safe' or 'vital', and technological progress should not be viewed independently of an assessment of what exactly progress is.
 
+Some things can be done, however. Terminologically, 'low-resource' is intentionally somewhat neutral, as compared to 'minority', 'endangered', or other terms that reflect Western viewpoints. Similarly, using the term language vitality as opposed to language endangerment 'represents a significant shift in the representation of attitudes toward the rhetoric of indigenous languages to one away from dire predictions about endangerment to action-oriented attitudes about vitality and sustainability \citep{grenoble2016response}.' These terms will be used for the rest of the paper, and any statements about resource development should be viewed as part of a narrower question of digital development (in the sense of building resources) for a specific, almost na\"ively countable view of language, unless otherwise specified (as in Section~\ref{sec:case-studies}).
 
 % TODO Alexis: would be interesting to also discuss how these metrics might apply for the set of languages you're interested in (as defined in 2.1)
 
 % Alexis: yes, in fact I think it's rather a different enterprise than defining language endangerment -- you may want to explicitly address the interaction between the two. what is your stance on the question? does lack of digital presence necessarily equate to language endangerment? (I think it's a very interesting question)
 
-% > A variety of metrics have been proposed for assessing a language?s degree of endangerment ? the UNESCO system (2003), the Graded Intergenerational Disruption Scale (GIDS; Fishman 1991), the Extended Graded Intergenerational Disruption Scale (E-GIDS; Lewis & Simons 2010), and the Language Endangerment Index (LEI; Lee & Van Way 2016), among others. - yang_ogrady.pdf
 
 \subsection{Digital presence}
 
 
 % A better lower bound might be the existence of a Bible. The Bible is often the first thing translated into a language, and there is a body of research that uses partial or full translations of the Bible for training NLP systems as a result \citep{chew2006evaluation, }.
 
-In this section, I am going to explain what digital presence is. This is more than just defining language endangerment - instead, this is about how do we quantify a language's existence digitally, either on the web or offline in archives.
+In this section, I am going to explain what digital presence is. This is more than just defining language vitality - instead, this is about how do we quantify a language's existence digitally, either on the web or offline in archives.
 
 Few of the metrics above take into account the level of digital literacy for a language. The possibility for a language to digitally ascend has been held up as a key component of judging a language's vitality by \citet{kornai2013digital}. %Reword wow
 % Describe Kornai
