--- a/references.bib
+++ b/references.bib
@@ -11,6 +11,18 @@
  year={2014}
 }
 
+@article{bodo2017language,
+  title={Language revitalization, modernity, and the Cs{\'a}ng{\'o} mode of speaking},
+  author={Bod{\'o}, Csan{\'a}d and Fazakas, No{\'e}mi and Heltai, J{\'a}nos Imre},
+  journal={Open Linguistics},
+  volume={3},
+  number={1},
+  pages={327--341},
+  year={2017},
+  publisher={De Gruyter Open}
+}
+
+
 @article{grenoble2016response,
   title={A response to ‘Assessing levels of endangerment in the Catalogue of Endangered Languages (ELCat) using the Language Endangerment Index (LEI)’, by Nala Huiying Lee \& John Van Way},
   author={Grenoble, Lenore A},
@@ -500,6 +512,21 @@
  publisher = {Cambridge University Press},
  title   = {Language Ecology and Endangerment},
  year   = {2011}
+}
+
+@article{newman1998we,
+  title={We has seen the enemy and it is us: The endangered languages issue as a hopeless cause},
+  author={Newman, Paul},
+  year={1998}
+}
+
+@book{wals,
+  address   = {Leipzig},
+  editor    = {Matthew S. Dryer and Martin Haspelmath},
+  publisher = {Max Planck Institute for Evolutionary Anthropology},
+  title     = {WALS Online},
+  url       = {http://wals.info/},
+  year      = {2013}
 }
 
 @inbook{wals-141,
